Update2 index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <button onclick="setTarget()">Set Target</button>
     
     <!-- Audio element for the sound -->
-    <audio id="audio" src="mixkit-digital-clock-digital-alarm-buzzer-992.wav"></audio>
+    <audio id="audio" src="SlowMorning.mp3"></audio>
 
     <script>
         // Function to increment the counter
