--- a/index.html
+++ b/index.html
@@ -24,20 +24,6 @@
             font-size: 18px;
         }
 
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
         input[type="number"] {
             width: 60px;
             text-align: center;
@@ -47,9 +33,8 @@
 </head>
 <body>
     <h1>Counter</h1>
-    <p>Target: <input type="number" id="target" value="10"></p>
+    <p>Target: <input type="number" id="target" value="10" onclick="setTarget()"></p>
     <p>Current Count: <span id="count">0</span></p>
-    <button onclick="setTarget()">Set Target</button>
     
     <!-- Audio element for the sound -->
     <audio id="audio" src="SlowMorning.mp3" preload="auto"></audio>
@@ -72,15 +57,23 @@
             }
         }
 
-        // Function to set the target
+        // Function to set the target and reset the current count to zero
         function setTarget() {
             var targetElement = document.getElementById("target");
+            var countElement = document.getElementById("count");
+            var audio = document.getElementById("audio");
             var newTarget = parseInt(prompt("Enter a new target:"), 10);
 
             if (!isNaN(newTarget)) {
                 targetElement.value = newTarget;
+                countElement.innerText = "0"; // Reset the current count to zero
             }
         }
+
+        // Prevent clicks on the target input from being counted
+        document.getElementById("target").addEventListener("click", function (e) {
+            e.stopPropagation();
+        });
 
         // Add an event listener to the document to increment the counter on any click
         document.addEventListener("click", incrementCounter);
