--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         .container {
             border: 2px solid #333; /* Add a border around the container */
+            background-color: #f5f5f5; /* Add a solid background color */
             padding: 20px; /* Add some padding for spacing */
             margin: 20px auto; /* Center the container horizontally */
             max-width: 400px; /* Limit the maximum width of the container */
