--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</div>
         
         <!-- Audio element for the sound -->
-        <audio id="audio" src="DayBreak.mp3" preload="auto"></audio>
+        <audio id="audio" src="Daybreak.mp3" preload="auto"></audio>
     </div>
 
     <script>
